# HFT-System

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  analysis.ipynb  build_script.sh  kraken_data.txt  main.cpp  min-order-sizes.json
BookBuilder/: BitmexClient.hpp  BookBuilder.cpp  BookBuilderComponent.cpp  BookBuilderGateway.cpp  CMakeLists.txt  build_script.sh
BookBuilder/OrderBook/: OrderBook.cpp  OrderBook.hpp
BookBuilder/ThroughputMonitor/: ThroughputMonitor.cpp  ThroughputMonitor.hpp
OrderBook/: OrderBook.cpp  OrderBook.hpp
OrderManager/: OrderManager.cpp  OrderManager.hpp  OrderManagerUtils.h  OrderManagerUtils.hpp  ThreadPool.cpp  ThreadPool.hpp
SPSCQueue/: SPSCQueue.hpp
Strategy/: Graph.cpp  a.out
StrategyComponent/: Graph.cpp  Graph.hpp  Strategy.cpp  Strategy.hpp
Utils/: Utils.cpp  Utils.hpp
Utils/ThroughputMonitor/: ThroughputMonitor.hpp
after-separation-kraken-book-builder/: new.txt  single-3-80-kraken.txt
bitmex-book-builder-data/: book-builder-data.txt  multi-3-80-book-builder-data.txt
conn-type-kraken-book-builder/: epoll-io_read-80-kraken-book-builder-data.txt
data/: book-builder.txt  multi-100-book-builder.txt  multi-20-book-builder.txt  multi-40-book-builder.txt  multi-60-book-builder.txt  multi-80-book-builder.txt  single-100-book-builder.txt  single-120-book-builder.txt  single-160-book-builder.txt  single-80-book-builder.txt
mapping-kraken-book-builder/: mapping-kraken-book-builder-data.txt  multi-3-80-kraken.txt  single-1-80-kraken.txt  single-3-80-kraken.txt
xbtusd-builder/: CMakeLists.txt  xbtusd-builder.cpp
xbtusd-builder/order_book/: order_book.cpp  order_book.hpp
xbtusd-builder/throughput_monitor/: throughput_monitor.cpp
